--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "react-native-screens": "~4.1.0",
     "react-native-web": "~0.19.13",
     "expo-dev-client": "~5.0.2",
-    "react-native-gesture-handler": "~2.20.2"
+    "react-native-gesture-handler": "~2.20.2",
+    "expo-av": "~15.0.1",
+    "expo-asset": "~11.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
